Code base cleanup