@@ -100,6 +100,46 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.8.0</version>
+                <executions>
+                    <execution>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <additionalOptions>
+                        <additionalOption>--add-exports ${open.tree.module.to.reified}</additionalOption>
+                        <additionalOption>--add-exports ${open.util.module.to.reified}</additionalOption>
+                        <additionalOption>--add-exports ${open.code.module.to.reified}</additionalOption>
+                        <additionalOption>--add-exports ${open.api.module.to.reified}</additionalOption>
+                        <additionalOption>--add-exports ${open.comp.module.to.reified}</additionalOption>
+                        <additionalOption>--add-exports ${open.jvm.module.to.reified}</additionalOption>
+                        <additionalOption>--add-exports ${open.processing.module.to.reified}</additionalOption>
+                    </additionalOptions>
+                    <failOnError>true</failOnError>
+                    <debug>true</debug>
+                    <verbose>true</verbose>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
